--- a/LeetCode/1761-1770/1765. 地图中的最高点（中等）.md
+++ b/LeetCode/1761-1770/1765. 地图中的最高点（中等）.md
@@ -81,22 +81,17 @@ class Solution {
                 ans[i][j] = g[i][j] == 1 ? 0 : -1;
             }
         }
-        int[][] dirs = new int[][]{{1,0}, {-1,0}, {0,1}, {0,-1}};
-        int h = 1;
+        int[][] dirs = new int[][]{{1,0},{-1,0},{0,1},{0,-1}};
         while (!d.isEmpty()) {
-            int size = d.size();
-            while (size-- > 0) {
-                int[] info = d.pollFirst();
-                int x = info[0], y = info[1];
-                for (int[] di : dirs) {
-                    int nx = x + di[0], ny = y + di[1];
-                    if (nx < 0 || nx >= m || ny < 0 || ny >= n) continue;
-                    if (ans[nx][ny] != -1) continue;
-                    ans[nx][ny] = h;
-                    d.addLast(new int[]{nx, ny});
-                }
+            int[] info = d.pollFirst();
+            int x = info[0], y = info[1];
+            for (int[] di : dirs) {
+                int nx = x + di[0], ny = y + di[1];
+                if (nx < 0 || nx >= m || ny < 0 || ny >= n) continue;
+                if (ans[nx][ny] != -1) continue;
+                ans[nx][ny] = ans[x][y] + 1;
+                d.addLast(new int[]{nx, ny});
             }
-            h++;
         }
         return ans;
     }
