--- a/Index/回溯算法.md
+++ b/Index/回溯算法.md
@@ -10,5 +10,6 @@
 | [301. 删除无效的括号](https://leetcode-cn.com/problems/remove-invalid-parentheses/) | [LeetCode 题解链接](https://leetcode-cn.com/problems/remove-invalid-parentheses/solution/yi-fen-zhong-nei-kan-dong-jiang-gua-hao-aya6k/) | 困难 | 🤩🤩🤩🤩     |
 | [306. 累加数](https://leetcode-cn.com/problems/additive-number/) | [LeetCode 题解链接](https://leetcode-cn.com/problems/additive-number/solution/gong-shui-san-xie-hui-su-gao-jing-du-jia-6o6b/) | 中等 | 🤩🤩🤩🤩     |
 | [797. 所有可能的路径](https://leetcode-cn.com/problems/all-paths-from-source-to-target/) | [LeetCode 题解链接](https://leetcode-cn.com/problems/all-paths-from-source-to-target/solution/gong-shui-san-xie-yun-yong-dfs-bao-sou-s-xlz9/) | 中等 | 🤩🤩🤩🤩     |
+| [1219. 黄金矿工](https://leetcode-cn.com/problems/path-with-maximum-gold/) | [LeetCode 题解链接](https://leetcode-cn.com/problems/path-with-maximum-gold/solution/gong-shui-san-xie-hui-su-suan-fa-yun-yon-scxo/) | 中等 | 🤩🤩🤩🤩🤩    |
 | [剑指 Offer 38. 字符串的排列](https://leetcode-cn.com/problems/zi-fu-chuan-de-pai-lie-lcof/) | [LeetCode 题解链接](https://leetcode-cn.com/problems/zi-fu-chuan-de-pai-lie-lcof/solution/gong-shui-san-xie-tong-yong-shi-xian-qu-4jbkj/) | 中等 | 🤩🤩🤩🤩     |
 
