--- a/LeetCode/1741-1750/1748. 唯一元素的和（简单）.md
+++ b/LeetCode/1741-1750/1748. 唯一元素的和（简单）.md
@@ -1,16 +1,14 @@
 ### 题目描述
 
-这是 LeetCode 上的 **[1748. 唯一元素的和](https://leetcode-cn.com/problems/sum-of-unique-elements/solution/mo-ni-ti-po-su-jie-fa-by-ac_oier-ff69/)** ，难度为 **简单**。
+这是 LeetCode 上的 **[1748. 唯一元素的和](https://leetcode-cn.com/problems/sum-of-unique-elements/solution/gong-shui-san-xie-yi-ti-shuang-jie-pai-x-atnd/)** ，难度为 **简单**。
 
-Tag : 「模拟」、「哈希表」
+Tag : 「模拟」、「哈希表」、「双指针」、「排序」
 
 
 
 给你一个整数数组 nums 。数组中唯一元素是那些只出现「恰好一次」的元素。
 
 请你返回 nums 中唯一元素的和 。
-
-
 
 
 示例 1：
@@ -44,40 +42,61 @@ Tag : 「模拟」、「哈希表」
 
 ---
 
-### 模拟
+### 排序 + 双指针
 
-一道模拟题，直接使用**哈希表**或者**数组**来存元素出现次数即可。
-
-对于一些给定了元素数据范围的题目，建议使用数据来进行统计，这样对于 Java 语言来说，代码会短些。
-
-对于没有给定元素数据范围，或者数据范围很大的，则使用哈希表。
+根据题意，其中一个做法是先对 `nums` 进行排序，使用双指针找到值相同的连续段 $[i, j)$，若连续段长度为 $1$，则将该值累加到答案。
 
 代码：
-```Java []
+```Java
 class Solution {
     public int sumOfUnique(int[] nums) {
-        int[] cnt = new int[110];
+        Arrays.sort(nums);
+        int n = nums.length, ans = 0;
+        for (int i = 0; i < n; ) {
+            int j = i;
+            while (j < n && nums[j] == nums[i]) j++;
+            if (j - i == 1) ans += nums[i];
+            i = j;
+        }
+        return ans;
+    }
+}
+```
+* 时间复杂度：排序复杂度为 $O(n\log{n})$；统计答案复杂度为 $O(n)$。整体复杂度为 $O(n\log{n})$
+* 空间复杂度：$O(\log{n})$
+
+---
+
+### 哈希表
+
+另外容易想到使用「哈希表」统计某个数的出现次数，又根据 $nums[i]$ 的范围为 $[1, 100]$，可直接使用数组充当哈希表。
+
+代码：
+```Java
+class Solution {
+    int[] cnt = new int[110];
+    public int sumOfUnique(int[] nums) {
         for (int i : nums) cnt[i]++;
         int ans = 0;
-        for (int i = 0; i < 110; i++) {
+        for (int i = 1; i <= 100; i++) {
             if (cnt[i] == 1) ans += i;
         }
         return ans;
     }
 }
 ```
-* 时间复杂度：$O(n)$
-* 空间复杂度：$O(n)$
+* 时间复杂度：令 $C$ 为 $nums[i]$ 的值域大小，本题固定为 $110$。整体复杂度为 $O(n + C)$
+* 空间复杂度：$O(C)$
 
 ---
 
 ### 最后
 
-这是我们「刷穿 LeetCode」系列文章的第 `No.1748` 篇，系列开始于 2021/01/01，截止于起始日 LeetCode 上共有 1916 道题目，部分是有锁题，我们将先将所有不带锁的题目刷完。
+这是我们「刷穿 LeetCode」系列文章的第 `No.1748` 篇，系列开始于 2021/01/01，截止于起始日 LeetCode 上共有 1916 道题目，部分是有锁题，我们将先把所有不带锁的题目刷完。
 
 在这个系列文章里面，除了讲解解题思路以外，还会尽可能给出最为简洁的代码。如果涉及通解还会相应的代码模板。
 
-为了方便各位同学能够电脑上进行调试和提交代码，我建立了相关的仓库：https://github.com/SharingSource/LogicStack-LeetCode。
+为了方便各位同学能够电脑上进行调试和提交代码，我建立了相关的仓库：https://github.com/SharingSource/LogicStack-LeetCode 。
 
 在仓库地址里，你可以看到系列文章的题解链接、系列文章的相应代码、LeetCode 原题链接和其他优选题解。
 
