--- a/LeetCode/1011-1020/1020. 飞地的数量（中等）.md
+++ b/LeetCode/1011-1020/1020. 飞地的数量（中等）.md
@@ -114,6 +114,62 @@ class Solution {
 
 ---
 
+### 多源 BFS
+
+也可以使用「多源 `BFS`」进行求解。
+
+将所有「边缘陆地」看做与超级源点相连，起始将所有「边缘陆地」进行入队（等价于只将超级源点入队，然后取出超级源点并进行拓展）。
+
+然后是常规的 `BFS` 过程，所有能够出队/入队的陆地格子，都代表与「边缘陆地」联通，都不属于「飞地」，对其进行标记。
+
+最后遍历整个棋盘，统计所有未被标记的「陆地」格子数量即是答案。
+
+不熟悉「多源 `BFS`」的同学可以看前置 🧀 ：[多源 BFS 入门](https://mp.weixin.qq.com/s?__biz=MzU4NDE3MTEyMA==&mid=2247487179&idx=1&sn=e30a662c03fba3861254dbcf3fb9d6f2&chksm=fd9ca5d4caeb2cc205804fd17a2ce86b25d0408adc3417e73154f59d37e7cb17e02374f5122c&token=1222269277&lang=zh_CN#rd)。
+
+代码：
+```Java
+class Solution {
+    public int numEnclaves(int[][] g) {
+        int m = g.length, n = g[0].length;
+        boolean[][] vis = new boolean[m][n];
+        Deque<int[]> d = new ArrayDeque<>();
+        for (int i = 0; i < m; i++) {
+            for (int j = 0; j < n; j++) {
+                if (i == 0 || j == 0 || i == m - 1 || j == n - 1) {
+                    if (g[i][j] == 0) continue;
+                    vis[i][j] = true;
+                    d.addLast(new int[]{i, j});
+                }
+            }
+        }
+        int[][] dirs = new int[][]{{1,0},{-1,0},{0,1},{0,-1}};
+        while (!d.isEmpty()) {
+            int[] poll = d.pollFirst();
+            int x = poll[0], y = poll[1];
+            for (int[] di : dirs) {
+                int nx = x + di[0], ny = y + di[1];
+                if (nx < 0 || nx >= m || ny < 0 || ny >= n) continue;
+                if (g[nx][ny] != 1) continue;
+                if (vis[nx][ny]) continue;
+                vis[nx][ny] = true;
+                d.addLast(new int[]{nx, ny});
+            }
+        }
+        int ans = 0;
+        for (int i = 0; i < m; i++) {
+            for (int j = 0; j < n; j++) {
+                if (g[i][j] == 1 && !vis[i][j]) ans++;
+            }
+        }
+        return ans;
+    }
+}
+```
+* 时间复杂度：$O(m * n)$
+* 空间复杂度：$O(m * n)$
+
+---
+
 ### 最后
 
 这是我们「刷穿 LeetCode」系列文章的第 `No.1011` 篇，系列开始于 2021/01/01，截止于起始日 LeetCode 上共有 1916 道题目，部分是有锁题，我们将先把所有不带锁的题目刷完。
