--- a/LeetCode/421-430/424. 替换后的最长重复字符（中等）.md
+++ b/LeetCode/421-430/424. 替换后的最长重复字符（中等）.md
@@ -6,13 +6,11 @@ Tag : 「双指针」、「滑动窗口」
 
 
 
-
-给你一个仅由大写英文字母组成的字符串，你可以将任意位置上的字符替换成另外的字符，总共可最多替换 k 次。
+给你一个仅由大写英文字母组成的字符串，你可以将任意位置上的字符替换成另外的字符，总共可最多替换 $k$ 次。
 
 在执行上述操作后，找到包含重复字母的最长子串的长度。
 
-注意：字符串长度 和 k 不会超过 $10^4$。
-
+注意：字符串长度 和 $k$ 不会超过 $10^4$。
 
 示例 1：
 ```
@@ -76,8 +74,8 @@ class Solution {
     }
 }
 ```
-* 时间复杂度：使用 `l` 和 `r` 指针对 `s` 进行单次扫描，复杂度为 $O(n)$；`check` 方法是对长度固定的数组进行扫描，复杂度为 $O(C)$。整体复杂度为 $O(n * C)$。
-* 空间复杂度：使用了固定长度的数组进行统计。复杂度为 $O(1)$
+* 时间复杂度：使用 `l` 和 `r` 指针对 `s` 进行单次扫描，复杂度为 $O(n)$；令 $C = 26$ 为字符集大小，`check` 方法复杂度为 $O(C)$。整体复杂度为 $O(n * C)$。
+* 空间复杂度：$O(C)$
 
 ---
 
