--- a/LeetCode/991-1000/992. K 个不同整数的子数组（困难）.md
+++ b/LeetCode/991-1000/992. K 个不同整数的子数组（困难）.md
@@ -33,7 +33,7 @@ Tag : 「双指针」、「滑动窗口」
 
 ---
 
-### 双指针
+### 滑动窗口
 
 对原数组 `nums` 的每一个位置 `i` 而言：
 
@@ -47,7 +47,9 @@ Tag : 「双指针」、「滑动窗口」
 
 累积每个位置的 `upper[i] - lower[i]` 就是答案。
 
-计算 `lower` 数组 和 `upper` 数组的过程可以使用双指针：
+计算 `lower` 数组 和 `upper` 数组的过程可以使用双指针。
+
+代码：
 
 ```java
 class Solution {
@@ -56,8 +58,6 @@ class Solution {
         int[] lower = new int[n], upper = new int[n];
         find(lower, nums, k);
         find(upper, nums, k - 1);
-        // System.out.println(Arrays.toString(lower));
-        // System.out.println(Arrays.toString(upper));
         int ans = 0;
         for (int i = 0; i < n; i++) ans += upper[i] - lower[i];
         return ans;
