--- a/LeetCode/421-430/424. 替换后的最长重复字符（中等）.md
+++ b/LeetCode/421-430/424. 替换后的最长重复字符（中等）.md
@@ -51,15 +51,8 @@ class Solution {
         int[] cnt = new int[26];
         int ans = 0;
         for (int l = 0, r = 0; r < s.length(); r++) {
-            // cnt[cs[r] - 'A']++;
-            int cur = cs[r] - 'A';
-            cnt[cur]++;
-            // while (!check(cnt, k)) cnt[cs[l++] - 'A']--; 
-            while (!check(cnt, k)) {
-                int del = cs[l] - 'A';
-                cnt[del]--;
-                l++;
-            }     
+            cnt[cs[r] - 'A']++;
+            while (!check(cnt, k)) cnt[cs[l++] - 'A']--;    
             ans = Math.max(ans, r - l + 1);
         }
         return ans;
