--- a/LeetCode/371-380/373. 查找和最小的K对数字（中等）.md
+++ b/LeetCode/371-380/373. 查找和最小的K对数字（中等）.md
@@ -193,7 +193,7 @@ class Solution {
         List<List<Integer>> ans = new ArrayList<>();
         int l = nums1[0] + nums2[0], r = nums1[n - 1] + nums2[m - 1];
         while (l < r) {
-            int mid = l + r >> 1;
+            int mid = (int)(0L + l + r >> 1);
             if (check(mid, k)) r = mid;
             else l = mid + 1;
         }
@@ -212,7 +212,7 @@ class Solution {
             int c = -1, d = -1;
             l = 0; r = m - 1;
             while (l < r) {
-                int mid = l + r >> 1;
+                int mid = (int)(0L + l + r >> 1);
                 if (nums2[mid] >= b) r = mid;
                 else l = mid + 1;
             }
