--- a/LeetCode/371-380/373. 查找和最小的K对数字（中等）.md
+++ b/LeetCode/371-380/373. 查找和最小的K对数字（中等）.md
@@ -220,7 +220,7 @@ class Solution {
             c = r;
             l = 0; r = m - 1;
             while (l < r) {
-                int mid = l + r + 1 >> 1;
+                int mid = (int)(0L + l + r + 1) >> 1;
                 if (nums2[mid] <= b) l = mid;
                 else r = mid - 1;
             }
