--- a/LeetCode/311-320/313. 超级丑数（中等）.md
+++ b/LeetCode/311-320/313. 超级丑数（中等）.md
@@ -60,24 +60,22 @@ Tag : 「优先队列」、「多路归并」
 2. 每次从队列取出最小值 $x$，然后将 $x$ 所对应的丑数 $x * primes[i]$ 进行入队。
 3. 对步骤 $2$ 循环多次，第 $n$ 次出队的值即是答案。
 
-为了防止同一丑数多次进队，我们需要使用数据结构 $Set$ 来记录入过队列的丑数。
+为了防止同一丑数多次进队，我们可以使用数据结构 $Set$ 来记录入过队列的丑数，但该做法常数较大，容易被卡。
+
+利用题目规定的答案为 $int$ 范围，以及丑数性质，我们可以直接在入队的时候做控制。
 
 代码：
 ```Java
 class Solution {
     public int nthSuperUglyNumber(int n, int[] primes) {
-        Set<Long> set = new HashSet<>();
-        PriorityQueue<Long> q = new PriorityQueue<>();
-        q.add(1L);
-        set.add(1L);
+        PriorityQueue<Integer> q = new PriorityQueue<>();
+        q.add(1);
         while (n-- > 0) {
-            long x = q.poll();
-            if (n == 0) return (int)x;
+            int x = q.poll();
+            if (n == 0) return x;
             for (int k : primes) {
-                if (!set.contains(k * x)) {
-                    set.add(k * x);
-                    q.add(k * x);
-                }
+                if (k <= Integer.MAX_VALUE / x) q.add(k * x);
+                if (x % k == 0) break;
             }
         }
         return -1; // never
