--- a/LeetCode/1791-1800/1791. 找出星型图的中心节点（简单）.md
+++ b/LeetCode/1791-1800/1791. 找出星型图的中心节点（简单）.md
@@ -61,7 +61,13 @@ class Solution {
 
 **显然，如果将每个 $edges[i]$ 看做两点之间的「双向边」的话，那么星型图为「欧拉图」，所有点的出度均等于入度。**
 
-容易将题拓展为求欧拉回路的问题：**给定星与星之间的距离，从某个星的位置出发，经过所有的边（可重复经过）并回到起点的最短距离，输出能够取得最短距离的路径（无解输出 $-1$）**。
+容易将题拓展为求欧拉回路的问题：
+
+>**给定星与星之间的距离，从某个星的位置出发，经过所有的边（可重复经过）并回到起点的最短距离，输出能够取得最短距离的路径（无解输出 $-1$）**。
+
+答案就是求「欧拉回路」，其中「可重复经过边」包含了「可重复经过点」的含义。
+
+由于星星图存在中心点，必然有解（但为了题目描述的完整性，出题都会预设一个无解返回值）；同时也不会重复经过某条边（仍然是为了题目描述完整性才这样写）。
 
 ---
 
