--- a/LeetCode/991-1000/992. K 个不同整数的子数组（困难）.md
+++ b/LeetCode/991-1000/992. K 个不同整数的子数组（困难）.md
@@ -15,13 +15,17 @@ Tag : 「双指针」、「滑动窗口」
 示例 1：
 ```
 输入：A = [1,2,1,2,3], K = 2
+
 输出：7
+
 解释：恰好由 2 个不同整数组成的子数组：[1,2], [2,1], [1,2], [2,3], [1,2,1], [2,1,2], [1,2,1,2]
 ```
 示例 2：
 ```
 输入：A = [1,2,1,3,4], K = 3
+
 输出：3
+
 解释：恰好由 3 个不同整数组成的子数组：[1,2,1,3], [2,1,3], [1,3,4]
 ```
 
@@ -37,13 +41,13 @@ Tag : 「双指针」、「滑动窗口」
 
 对原数组每个 $nums[i]$ 而言：
 
-1. 找到其左边「最远」满足出现 $k$ 个不同字符的下标，记为 $p$。这时候形成的区间为 $[p, i]$
-2. 找到其左边「最远」满足出现 $k - 1$ 个不同字符的下标，记为 $j$ 。这时候形成的区间为 $[j, i]$
+1. 找到其左边「最远」满足出现 $k$ 个不同字符的下标，记为 $p$ ，这时候形成的区间为 $[p, i]$
+2. 找到其左边「最远」满足出现 $k - 1$ 个不同字符的下标，记为 $j$ ，这时候形成的区间为 $[j, i]$
 3. **那么对于 $j - p$ 其实就是代表以 $nums[i]$ 为右边界（必须包含 $num[i]$），不同字符数量「恰好」为 $k$ 的子数组数量**
 
 ![WechatIMG1758.png](https://pic.leetcode-cn.com/1612839352-exScZN-WechatIMG1758.png)
 
-我们使用 $lower$ 数组存起每个位置的 $k$；使用 $upper$ 数组存起每个位置的 $j$。
+我们使用 $lower$ 数组存起每个位置的 $p$；使用 $upper$ 数组存起每个位置的 $j$。
 
 累积每个位置的 $upper[i] - lower[i]$ 就是答案。
 
@@ -55,25 +59,21 @@ class Solution {
     public int subarraysWithKDistinct(int[] nums, int k) {
         int n = nums.length;
         int[] lower = new int[n], upper = new int[n];
-        find(lower, nums, k);
-        find(upper, nums, k - 1);
+        find(nums, lower, k);
+        find(nums, upper, k - 1);
         int ans = 0;
         for (int i = 0; i < n; i++) ans += upper[i] - lower[i];
         return ans;
     }
-    void find(int[] arr, int[] nums, int k) {
+    void find(int[] nums, int[] arr, int k) {
         int n = nums.length;
-        int[] cnt = new int[n + 1];
-        for (int i = 0, j = 0, sum = 0; i < n; i++) {
-            int right = nums[i];
-            if (cnt[right] == 0) sum++;
-            cnt[right]++;
+        int[] cnt = new int[20010];
+        for (int i = 0, j = 0, sum = 0; j < n; j++) {
+            if (++cnt[nums[j]] == 1) sum++;
             while (sum > k) {
-                int left = nums[j++];
-                cnt[left]--;
-                if (cnt[left] == 0) sum--;
+                if (--cnt[nums[i++]] == 0) sum--;
             }
-            arr[i] = j;
+            if (sum == k) arr[j] = i;
         }
     }
 }
