--- a/LeetCode/911-920/917. 仅仅反转字母（简单）.md
+++ b/LeetCode/911-920/917. 仅仅反转字母（简单）.md
@@ -1,10 +1,10 @@
 ### 题目描述
 
-这是 LeetCode 上的 **[911. 在线选举](https://leetcode-cn.com/problems/reverse-only-letters/solution/gong-shui-san-xie-jian-dan-shuang-zhi-zh-xrpt/)** ，难度为 **中等**。
-
-
+这是 LeetCode 上的 **[917. 仅仅反转字母](https://leetcode-cn.com/problems/reverse-only-letters/solution/gong-shui-san-xie-jian-dan-shuang-zhi-zh-xrpt/)** ，难度为 **简单**。
 
 Tag : 「双指针」
+
+
 
 给你一个字符串 `s` ，根据下述规则反转字符串：
 
